# full-stack-course

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
Course/: views.py
Full_Stack_Course/: asgi.py  settings.py  urls.py  wsgi.py
static/: index.css
staticfiles/: index.7d2f1e83d5ff.css  index.css  staticfiles.json
template/: about.html  base.html  contact.html  course_content.html  django.html  indexs.html  mern.html  pricing.html
