[tool.poetry]
name = "full-stack-course"
version = "0.1.0"
description = ""
authors = ["tharanesh14 <tharanesh14@gmail.com>"]
readme = "README.md"
packages = [{include = "full_stack_course"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
